--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.17.0",
     "lucide-react": "^0.471.0",
     "next": "14.2.16",
     "react": "^18",
+    "react-animated-numbers": "^1.0.0",
     "react-dom": "^18",
     "react-scroll": "^1.9.0",
     "react-typed": "^2.0.12",
+    "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
